--- a/app.html
+++ b/app.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NexusTime Login</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8Zs9Ls",
-        authDomain: "nexustime-e8b91.firebaseapp.com",
-        projectId: "nexustime-e8b91",
-        storageBucket: "nexustime-e8b91.appspot.com",
-        messagingSenderId: "516976739338",
-        appId: "1:516976739338:web:537ae732707a2a1aab4bf3",
-        measurementId: "G-QRSD6TYH86"
-      };
-      firebase.initializeApp(firebaseConfig);
-    </script>
-  </head>
-  <body class="bg-gray-950 text-white font-inter">
-    <div class="min-h-screen flex items-center justify-center px-4">
-      <div class="w-full max-w-md bg-gray-900 p-8 rounded-2xl shadow-xl">
-        <div class="flex justify-center mb-6">
-          <img src="/nexustimelogo.png" alt="NexusTime Logo" class="w-20 h-20 rounded-full" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - NexusTime</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+</head>
+<body class="bg-gray-900 text-white font-inter">
+  <div class="min-h-screen flex flex-col items-center justify-center p-6">
+    <div class="w-full max-w-sm bg-gray-800 p-8 rounded-xl shadow-lg">
+      <div class="flex justify-center mb-6">
+          <img src="https://github.com/Harveyp1/nexustime/blob/main/nexustimelogo.png?raw=true" alt="NexusTime Logo" class="h-12" />
         </div>
-        <h2 class="text-3xl font-bold text-center text-emerald-400 mb-6">Welcome Back</h2>
-        <form id="loginForm" class="space-y-5">
-          <div>
-            <label for="email" class="block text-sm mb-1">Email</label>
-            <input type="email" id="email" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required />
-          </div>
-          <div>
-            <label for="password" class="block text-sm mb-1">Password</label>
-            <input type="password" id="password" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required />
-          </div>
-          <button type="submit" class="w-full py-3 bg-emerald-500 hover:bg-emerald-600 rounded-xl text-white font-semibold text-center">Login</button>
-        </form>
-        <div class="mt-6 text-center">
-          <a href="signup.html" class="text-sm text-emerald-400 hover:underline">Don't have an account? Sign up</a>
+        <h2 class="text-2xl font-bold text-center mb-6">Welcome Back</h2>
+      <form id="loginForm" class="space-y-4">
+        <div>
+          <label class="block text-gray-300 mb-1" for="email">Email</label>
+          <input type="email" id="email" class="w-full p-3 rounded bg-gray-700 focus:outline-none" required />
         </div>
-      </div>
+        <div>
+          <label class="block text-gray-300 mb-1" for="password">Password</label>
+          <input type="password" id="password" class="w-full p-3 rounded bg-gray-700 focus:outline-none" required />
+        </div>
+        <button type="submit" class="w-full bg-emerald-400 text-gray-900 py-3 rounded font-semibold hover:bg-emerald-500">Log In</button>
+      </form>
+      <p class="text-center text-sm text-gray-400 mt-4">
+        Don’t have an account? <a href="signup.html" class="underline text-emerald-400">Sign Up</a>
+      </p>
     </div>
+  </div>
 
-    <script>
-      document.getElementById("loginForm").addEventListener("submit", async (e) => {
-        e.preventDefault();
-        const email = document.getElementById("email").value;
-        const password = document.getElementById("password").value;
-        try {
-          await firebase.auth().signInWithEmailAndPassword(email, password);
-          const script = document.createElement("script");
-          script.src = "/scripts/check-workspace.js";
-          document.body.appendChild(script);
-        } catch (error) {
-          alert("Login failed: " + error.message);
-        }
-      });
-    </script>
-  </body>
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js';
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js';
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8s9Ls",
+      authDomain: "nexustime-e8b91.firebaseapp.com",
+      projectId: "nexustime-e8b91",
+      storageBucket: "nexustime-e8b91.appspot.com",
+      messagingSenderId: "516976739338",
+      appId: "1:516976739338:web:537ae732707a2a1aab4bf3",
+      measurementId: "G-QRSD6TYH86"
+    };
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    onAuthStateChanged(auth, user => {
+      if (user) {
+        window.location.href = 'switch-workspace.html';
+      }
+    });
+
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+      } catch (err) {
+        alert('Login failed: ' + err.message);
+      }
+    });
+  </script>
+</body>
 </html>
