--- a/dashboard.html
+++ b/dashboard.html
@@ -5,60 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard - NexusTime</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-</head>
-<body class="bg-gray-950 text-white font-inter">
-  <!-- Error / Debug -->
-  <div id="authError" class="hidden p-6 text-center">
-    <p class="text-red-400 mb-4">You are not signed in. Please <a href="app.html" class="text-emerald-400 underline">log in</a>.</p>
-  </div>
-  <div id="workspaceError" class="hidden p-6 text-center">
-    <p class="text-red-400 mb-4">No workspace selected. Please <a href="switch-workspace.html" class="text-emerald-400 underline">choose a workspace</a>.</p>
-  </div>
-
-  <!-- Main Content -->
-  <div id="mainContainer" class="hidden">
-    <!-- Navigation -->
-    <nav class="bg-gray-900 text-white py-3 shadow-md">
-      <div class="container mx-auto px-6 flex justify-between items-center">
-        <div class="flex items-center space-x-4">
-          <img src="https://github.com/Harveyp1/nexustime/blob/main/nexustimelogo.png?raw=true" alt="Logo" class="h-10">
-          <span class="text-xl font-bold text-emerald-400">NexusTime</span>
-        </div>
-        <div class="flex space-x-4 text-sm">
-          <a href="dashboard.html" class="hover:text-emerald-400">Dashboard</a>
-          <a href="schedule.html" class="hover:text-emerald-400">Schedule</a>
-          <a href="timesheet.html" class="hover:text-emerald-400">Timesheets</a>
-          <a href="switch-workspace.html" class="hover:text-emerald-400">Switch Workspace</a>
-          <a href="app.html" class="hover:text-emerald-400">Logout</a>
-        </div>
-      </div>
-    </nav>
-
-    <main class="flex-1 p-6 space-y-6">
-      <h1 class="text-xl font-bold text-emerald-400">Workspace: <span id="workspaceName"></span></h1>
-
-      <!-- Summary -->
-      <section class="grid grid-cols-1 md:grid-cols-4 gap-4" id="summaryWidgets"></section>
-
-      <!-- Productivity & Alerts -->
-      <section class="grid grid-cols-1 lg:grid-cols-2 gap-4" id="alertsSection"></section>
-
-      <!-- Activity Feed -->
-      <section class="bg-gray-800 p-4 rounded-xl" id="activityFeed"></section>
-
-      <!-- Suggestions -->
-      <section class="bg-gray-800 p-4 rounded-xl" id="suggestions"></section>
-    </main>
-  </div>
-
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js';
     import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js';
     import { getFirestore, doc, getDoc, collection, getDocs } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js';
 
     const firebaseConfig = {
-      apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8s9Ls",
+      apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8Zs9Ls",
       authDomain: "nexustime-e8b91.firebaseapp.com",
       projectId: "nexustime-e8b91",
       storageBucket: "nexustime-e8b91.appspot.com",
@@ -66,84 +19,87 @@
       appId: "1:516976739338:web:537ae732707a2a1aab4bf3",
       measurementId: "G-QRSD6TYH86"
     };
+
     const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+    const auth = getAuth();
     const db = getFirestore(app);
 
-    function getCurrentWeekRange() {
-      const now = new Date();
-      const day = now.getDay();
-      const diffToMonday = now.getDate() - day + (day === 0 ? -6 : 1);
-      const monday = new Date(now.setDate(diffToMonday));
-      monday.setHours(0,0,0,0);
-      return Array.from({length:7}, (_,i) => {
-        const d = new Date(monday);
-        d.setDate(monday.getDate() + i);
-        return d.toISOString().split('T')[0];
-      });
-    }
-
-    function calculateHours(punches) {
-      punches.sort((a,b) => a.time.localeCompare(b.time));
-      let total = 0, inTime = null;
-      for (const p of punches) {
-        if (p.type === 'in') inTime = p.time;
-        else if (p.type === 'out' && inTime) {
-          const [h1,m1] = inTime.split(':').map(Number);
-          const [h2,m2] = p.time.split(':').map(Number);
-          total += (h2*60 + m2) - (h1*60 + m1);
-          inTime = null;
-        }
-      }
-      return total / 60;
-    }
-
-    async function loadSummary(wsId) {
-      const summaryEl = document.getElementById('summaryWidgets');
-      const empSnap = await getDocs(collection(db, 'workspaces', wsId, 'employees'));
-      const employees = empSnap.docs.map(d => ({id:d.id, ...d.data()}));
-      let totalHours = 0;
-      const weekDates = getCurrentWeekRange();
-      for (const emp of employees) {
-        const punchSnap = await getDocs(collection(db, 'workspaces', wsId, 'employees', emp.id, 'punches'));
-        const weekPunches = punchSnap.docs.map(d=>d.data()).filter(p=>weekDates.includes(p.date));
-        totalHours += calculateHours(weekPunches);
-      }
-      summaryEl.innerHTML = `
-        <div class="bg-gray-800 p-4 rounded-xl">
-          <h2 class="text-sm text-gray-400">Total Employees</h2>
-          <p class="text-2xl font-bold">${employees.length}</p>
-        </div>
-        <div class="bg-gray-800 p-4 rounded-xl">
-          <h2 class="text-sm text-gray-400">Hours This Week</h2>
-          <p class="text-2xl font-bold">${totalHours.toFixed(1)}h</p>
-        </div>`;
-    }
-
     onAuthStateChanged(auth, async user => {
-      if (!user) {
-        document.getElementById('authError').classList.remove('hidden');
-        return;
-      }
-      const wsId = localStorage.getItem('activeWorkspace');
-      if (!wsId) {
-        document.getElementById('workspaceError').classList.remove('hidden');
-        return;
-      }
-      document.getElementById('mainContainer').classList.remove('hidden');
-      const wsSnap = await getDoc(doc(db, 'workspaces', wsId));
-      const wsData = wsSnap.exists() ? wsSnap.data() : {};
-      document.getElementById('workspaceName').textContent = wsData.name || wsId;
-      await loadSummary(wsId);
-      document.getElementById('activityFeed').innerHTML = `
-        <h3 class="text-lg font-semibold mb-2">Recent Activity</h3>
-        <ul class="text-sm text-gray-300 space-y-2">
-          <li>✔️ Sample activity entry</li>
-        </ul>`;
-      document.getElementById('suggestions').innerHTML = `
-        <h3 class="text-lg font-semibold mb-2">Smart Suggestions</h3>
-        <p class="text-sm text-emerald-400">🧠 Sample suggestion text.</p>`;
+      if (!user) return (window.location.href = 'app.html');
+
+      const userDoc = await getDoc(doc(db, 'users', user.uid));
+      const data = userDoc.data();
+      const workspaceId = localStorage.getItem('activeWorkspace');
+
+      if (!workspaceId) return (window.location.href = 'switch-workspace.html');
+
+      const wsDoc = await getDoc(doc(db, 'workspaces', workspaceId));
+      const wsData = wsDoc.data();
+
+      document.getElementById('workspaceName').textContent = wsData.name;
+
+      const employeesSnap = await getDocs(collection(db, `workspaces/${workspaceId}/employees`));
+      document.getElementById('employeeCount').textContent = employeesSnap.size;
+      // Other logic to populate recent activity and charts
     });
   </script>
+</head>
+<body class="bg-gray-900 text-white font-inter min-h-screen flex flex-col">
+  <!-- Header -->
+  <header class="bg-gray-800 p-4 flex items-center justify-between">
+    <img src="https://github.com/Harveyp1/nexustime/blob/main/nexustimelogo.png?raw=true" alt="NexusTime Logo" class="h-10" />
+    <nav class="space-x-6">
+      <a href="dashboard.html" class="text-emerald-400">Dashboard</a>
+      <a href="timesheet.html" class="hover:text-emerald-400">Timesheet</a>
+      <a href="schedule.html" class="hover:text-emerald-400">Schedule</a>
+      <a href="switch-workspace.html" class="hover:text-emerald-400">Switch Workspace</a>
+      <a href="app.html" class="hover:text-emerald-400">Logout</a>
+    </nav>
+  </header>
+
+  <main class="p-8 space-y-8">
+    <h1 class="text-3xl font-bold">Welcome to <span id="workspaceName">NexusTime</span></h1>
+
+    <!-- Overview Cards -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h3 class="text-sm text-gray-400">Total Employees</h3>
+        <p class="text-2xl font-bold" id="employeeCount">...</p>
+      </div>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h3 class="text-sm text-gray-400">Pending Timesheets</h3>
+        <p class="text-2xl font-bold">...</p>
+      </div>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h3 class="text-sm text-gray-400">Approved Timesheets</h3>
+        <p class="text-2xl font-bold">...</p>
+      </div>
+    </div>
+
+    <!-- Recent Activity & Time-Off Cards -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h2 class="text-xl font-semibold mb-4">Recent Activity</h2>
+        <ul class="space-y-2 text-sm">
+          <li>• Jane Doe clocked in at 9:01 AM</li>
+          <li>• John Smith submitted timesheet for approval</li>
+          <li>• New employee added: Sarah Lin</li>
+        </ul>
+      </div>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h2 class="text-xl font-semibold mb-4">Time Off Requests</h2>
+        <ul class="space-y-2 text-sm">
+          <li>• James requested PTO for 07/10/2025</li>
+          <li>• Kelly requested sick leave</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Placeholder for Charts -->
+    <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+      <h2 class="text-xl font-semibold mb-4">Hours Logged (Chart Placeholder)</h2>
+      <div class="h-48 bg-gray-700 rounded"></div>
+    </div>
+  </main>
 </body>
 </html>
